WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
171769
[Mac][cmake] Buildfix after
r216047
https://bugs.webkit.org/show_bug.cgi?id=171769
Summary
[Mac][cmake] Buildfix after r216047
Csaba Osztrogonác
Reported
2017-05-05 23:11:20 PDT
In file included from /Volumes/Data/slave/elcapitan-cmake-debug/build/Tools/WebKitTestRunner/cocoa/TestRunnerWKWebView.mm:29: /Volumes/Data/slave/elcapitan-cmake-debug/build/Source/WebCore/platform/spi/ios/UIKitSPI.h:39:9: fatal error: 'UIKit/UIKit.h' file not found #import <UIKit/UIKit.h> ^ UIKitSPI.h is ios only header, it shouldn't be included unconditionally.
Attachments
Patch
(1.21 KB, patch)
2017-05-05 23:12 PDT
,
Csaba Osztrogonác
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Csaba Osztrogonác
Comment 1
2017-05-05 23:12:37 PDT
Created
attachment 309271
[details]
Patch patch for EWS
WebKit Commit Bot
Comment 2
2017-05-06 04:34:12 PDT
Comment on
attachment 309271
[details]
Patch Clearing flags on attachment: 309271 Committed
r216326
: <
http://trac.webkit.org/changeset/216326
>
WebKit Commit Bot
Comment 3
2017-05-06 04:34:13 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug