[Mac][cmake] Buildfix after r216047 https://bugs.webkit.org/show_bug.cgi?id=171769

Unreviewed buildfix.


* WebKitTestRunner/cocoa/TestRunnerWKWebView.mm:


Canonical link: https://commits.webkit.org/188682@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@216326 268f45cc-cd09-0410-ab3c-d52691b4dbfc